# RL-tic-tac-toe

./: .gitignore  README.md  notes.md  pyproject.toml
.experiments/: exps.py  nps.ipynb
configs/: default.yaml  train.yaml
scripts/: evaluate.py  play_human.py  train.py
src/tictactoe_rl/: __init__.py  agents.py  env.py  evaluator.py  plotting.py  trainer.py  utils.py
tests/: test_env.py  test_terminal_conditions.py
